tests/tooling/fixtures/native/execution/positive/message_send_nil_global_identifier_post_call_non_elided.objc3
module MessageSendNilGlobalIdentifierPostCallNonElidedExecution;

let receiver = nil;
let touch_counter = 0;

fn touch() -> i32 {
  touch_counter = touch_counter + 1;
  return 0;
}

fn main() -> i32 {
  touch();
  return [receiver ping];
}
