tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_in_param_type_extern.objc3
module MisplacedQualifierInParamTypeExtern;

fn add(lhs: extern, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
